--- a/css/style_template.css
+++ b/css/style_template.css
@@ -131,14 +131,16 @@ body {
 
 .cont_destacado_header_moduloCont{ position:relative; background:#333; overflow:hidden;}
 .cont_destacado_header_moduloCont a{ text-decoration: none; text-transform:none; color:#fff; float:left; display:block;}
-.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity1{ width: 100%;  height: 100%;  background:#338f29; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
-.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity2{ width: 100%;  height: 100%;  background:#b2b22e; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
-.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity3{ width: 100%;  height: 100%;  background:#9536ce; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
-.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity4{ width: 100%;  height: 100%;  background:#f4206a; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
+
+.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity{ width: 100%;  height: 100%; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
+.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity0{ width: 100%;  height: 100%;  background:#338f29; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
+.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity1{ width: 100%;  height: 100%;  background:#b2b22e; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
+.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity2{ width: 100%;  height: 100%;  background:#9536ce; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
+.cont_destacado_header_moduloCont .cont_destacado_header_moduloCont_fondo_opacity3{ width: 100%;  height: 100%;  background:#f4206a; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
 
 .cont_destacado_header_moduloCont img{position:relative; width:120%!important;}
 .cont_destacado_header_moduloCont .cont_info_destacado_header{ position: absolute; top: 0; left: 0; margin:20px 30px; height: calc(100% - 40px); width: calc(100% - 60px);}
-.cont_destacado_header_moduloCont .cont_info_destacado_header .cont_destacado_header_moduloCont_item1{ background: #333; display: block; float: left;  padding: 1px 10px;}
+.cont_destacado_header_moduloCont .cont_info_destacado_header .cont_destacado_header_moduloCont_item1{ background: #333; display: block; float: left;  padding: 1px 10px; margin-left: 5px; }
 .cont_destacado_header_moduloCont .cont_info_destacado_header p{  display: block; float: left; font-size: 21px; line-height: 25px; font-weight: 500; }
 
 
