--- a/css/style_template.css
+++ b/css/style_template.css
@@ -35,7 +35,7 @@ body {
 
 
 #slider_header_car{height:200px!important; }
-        @media (min-width:1780px){  #slider_header_car{ height:920px!important;}  }
+        @media (min-width:1780px){  #slider_header_car{ height:690px!important;}  }
         @media (min-width:1580px) AND (max-width:1780px){  #slider_header_car{ height:820px!important;}  }
         @media (min-width:1480px) AND (max-width:1580px){  #slider_header_car{ height:790px!important;}  }
         @media (min-width:1360px) AND (max-width:1480px){  #slider_header_car{ height:720px!important;}  }
@@ -140,7 +140,7 @@ body {
 
 .cont_destacado_header_moduloCont img{position:relative; width:120%!important;}
 .cont_destacado_header_moduloCont .cont_info_destacado_header{ position: absolute; top: 0; left: 0; margin:20px 30px; height: calc(100% - 40px); width: calc(100% - 60px);}
-.cont_destacado_header_moduloCont .cont_info_destacado_header .cont_destacado_header_moduloCont_item1{ font-size: 14px; line-height: 20px; background: #333; display: block; float: left;  padding: 1px 10px; margin-left: 5px; margin-bottom: 5px; }
+.cont_destacado_header_moduloCont .cont_info_destacado_header .cont_destacado_header_moduloCont_item1{text-transform: capitalize; font-size: 14px; line-height: 20px; background: #333; display: block; float: left;  padding: 1px 10px; margin-left: 5px; margin-bottom: 5px; }
 .cont_destacado_header_moduloCont .cont_info_destacado_header p{  display: block; float: left; font-size: 21px; line-height: 25px; font-weight: 500; }
 
 
@@ -219,7 +219,7 @@ body {
           /*.contGrandeCat .contCat_fondo_opacity:hover{ opacity: 0.0;}*/
           .contGrandeCat img{position:relative; width:140%!important;}
           .contGrandeCat .contInfoGrandeCat{ position: absolute; top: 0; left: 0; margin:20px 30px; height: calc(100% - 40px); width: calc(100% - 60px);}
-          .contGrandeCat .contInfoGrandeCat h1{ font-size:45px; font-weight:bold;}
+          .contGrandeCat .contInfoGrandeCat h1{ font-size:45px; font-weight:bold;text-transform: capitalize;}
           .contGrandeCat .contInfoGrandeCat p{  float: left; margin: 0; padding: 0; line-height: 22px; font-size: 18px; font-weight: 300; width: 400px;}
           .contGrandeCat .contInfoGrandeCat .contVidInfo{ bottom: 10px; left: 0; position: absolute;  width: 100%; }
           .contGrandeCat .contInfoGrandeCat .contVidInfo .contVidInfo_icon{width:10px; height:10px; background:#fff; float:right; margin-top:8px;}
@@ -257,7 +257,7 @@ body {
           .contChicoCat a{ text-decoration: none; text-transform:none; color:#fff; float:left; display:block;}
           .contChicoCat img{position:relative; width:100%!important;}
           .contChicoCat .contInfoChicoCat{ position: absolute; top: 0; left: 0; margin:0px 30px 20px 30px;  width: calc(100% - 60px); height:calc(100% - 20px);}
-          .contChicoCat .contInfoChicoCat h1{ font-size:30px; font-weight:bold;}
+          .contChicoCat .contInfoChicoCat h1{ font-size:30px; font-weight:bold;text-transform: capitalize;}
           .contChicoCat .contInfoChicoCat p{ float:left; margin:0;padding:0; line-height: 20px; font-size: 18px; font-weight: 300;}
           .contChicoCat .contInfoChicoCat .contVidInfo{ bottom: 10px; left: 0; position: absolute;  width: 100%; }
           .contChicoCat .contInfoChicoCat .contVidInfo .contVidInfo_icon{width:10px; height:10px; background:#fff; float:right;  margin-top: 3px;}
@@ -375,7 +375,7 @@ body {
     #contAsideBotton{ height:auto; margin: 0; padding: 0; overflow: hidden; position:relative;}
     #contAsideBotton .contAsideBotton_fondo_opacity{ width: 100%;  height: 100%;  background:#200944; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
     #contAsideBotton img{ position:absolute; top:0; left:0; width:100%; }
-    #contAsideBotton .contAsideBotton_info{ width: 100%; height:100%; text-align:center; position:absolute; top:0; left:0;}
+    #contAsideBotton .contAsideBotton_info{text-transform: capitalize; width: 100%; height:100%; text-align:center; position:absolute; top:0; left:0;}
     #contAsideBotton .contAsideBotton_info h1{  margin: 160px 0px 20px 0px;  font-size: 60px; font-weight: bold;  letter-spacing: 4px;}
     #contAsideBotton .contAsideBotton_info h4{ font-size:20px; }
     #contAsideBotton .contAsideBotton_info p{  font-size: 16px;  margin: 20px 25px; }
@@ -425,7 +425,7 @@ body {
           .contChicoResult .contChicoResult_moduloCont a{width:100%; display: block; float: left; color:#fff;}
           .contChicoResult .contChicoResult_moduloCont img{  position:relative; width:120%!important; }
           .contChicoResult .contChicoResult_moduloCont .contChicoResult_moduloContfondo_opacity{ width: 100%; height: 100%; background: #333;  display: block;  float: left;  position: absolute; top: 0;  left: 0; opacity: 0.5;}
-          .contChicoResult_moduloContfondo_cont_info_item1{font-size: 14px; line-height: 20px; display: block; float: left; padding: 1px 10px; margin-left:5px; margin-bottom: 5px;}
+          .contChicoResult_moduloContfondo_cont_info_item1{text-transform: capitalize; font-size: 14px; line-height: 20px; display: block; float: left; padding: 1px 10px; margin-left:5px; margin-bottom: 5px;}
           .contChicoResult .contChicoResult_moduloCont .contChicoResult_moduloContfondo_cont_info{ position: absolute; top: 0;  left: 0; margin: 20px 30px; height: calc(100% - 40px);  width: calc(100% - 60px); }
           .contChicoResult .contChicoResult_moduloCont .contChicoResult_moduloContfondo_cont_info h1{width:100%; font-size:20px; line-height:25px; color:#fff; float: left; display: block; margin:20px 0px 10px 0px; font-weight: bold;}
           .contChicoResult .contChicoResult_moduloCont .contChicoResult_moduloContfondo_cont_info p{width:100%; display: block; float: left; }
@@ -464,7 +464,7 @@ body {
           .contGrandeResult .contGrandeResult_moduloCont a{width:100%; display: block; float: left; color:#fff;}
           .contGrandeResult .contGrandeResult_moduloCont img{  position:relative; width:120%!important; }
           .contGrandeResult .contGrandeResult_moduloCont .contGrandeResult_moduloContfondo_opacity{ width: 100%; height: 100%; background: #333;  display: block;  float: left;  position: absolute; top: 0;  left: 0; opacity: 0.5;}
-          .contGrandeResult_moduloContfondo_cont_info_item1{display: block; float: left; padding: 1px 10px; margin-left:5px; margin-bottom: 5px;}
+          .contGrandeResult_moduloContfondo_cont_info_item1{text-transform: capitalize; display: block; float: left; padding: 1px 10px; margin-left:5px; margin-bottom: 5px;}
           .contGrandeResult .contGrandeResult_moduloCont .contGrandeResult_moduloContfondo_cont_info{ position: absolute; bottom: 0;  left: 0; margin: 20px 30px; width: calc(100% - 60px); }
           .contGrandeResult .contGrandeResult_moduloCont .contGrandeResult_moduloContfondo_cont_info h1{width:100%; font-size:35px; line-height:40px; color:#fff; float: left; display: block; margin:20px 0px 10px 0px; font-weight: bold;}
           .contGrandeResult .contGrandeResult_moduloCont .contGrandeResult_moduloContfondo_cont_info p{width:100%; display: block; float: left; font-size:20px; line-height:22px; margin:10px 0px;}
@@ -563,7 +563,7 @@ body {
 
 
 .cont_categoria_section_result{background:#ddd; min-height: 1000px; margin:0px!important; padding: 0px!important;}
-.cont_categoria_section_result_post{width: 100%; height:100%; margin:0px!important; padding: 0px!important;  display:block; float:left; position:relative; }
+.cont_categoria_section_result_post{width: 100%; height:100%; margin:0px!important; padding: 0px!important;  display:block; float:left; position:relative; overflow: hidden; }
 .cont_categoria_section_result_post a{color:#fff;}
 .cont_categoria_section_result_post .result_post_01{ width:100%; margin:0px!important; padding: 0px!important; background: #232323; float:left; position:relative; z-index:5;}
 .cont_categoria_section_result_post .result_post_02{ width:100%; margin:0px!important; padding: 0px!important; background: #666; float:left; overflow:hidden; position:relative; z-index:1;}
@@ -575,11 +575,12 @@ body {
 
 .result_post_01_contenido{ width:calc(100% - 60px); height:calc(100% - 60px); margin:30px; position:relative; }
 .result_post_01_contCat{ width:100%; height:30px;}
-.result_post_01_contCat_bot{height:30px; font-size:18px; line-height:22px; float:left; display: block; padding:4px 10px; background:#000; margin:0px 5px 0px 0px;}
+.result_post_01_contCat_subCont{float: left; width: 100%; display: block;}
+.result_post_01_contCat_bot{ font-size:14px; line-height:16px; float:left; display: block; padding:4px 10px; background:#000; margin:0px 5px 5px 0px;}
 .result_post_01_contCat_subcat{font-size: 14px; line-height:22px; padding:4px 5px; float:left; }
 .result_post_01_contCat_subcat a{ color:#fff; }
-.result_post_01_contenido h1{ font-size: 25px; }
-.result_post_01_contenido p{ font-size: 16px; }
+.result_post_01_contenido h1{ font-size: 25px; float:left;}
+.result_post_01_contenido p{ font-size: 16px; float:left; }
 .result_post_01_contenido_icon{ position:absolute; bottom:0px; right:0px; width:10px; height:10px; background:#fff; }
 
         @media (min-width:1280px) { .result_post_01{ height:419px;} .result_post_02{ height:419px; }    }
