--- a/css/style_template.css
+++ b/css/style_template.css
@@ -50,8 +50,8 @@ body {
 
 
 
-
-        @media (min-width:1280px) {   }
+        @media (min-width:1680px) {  }
+        @media (min-width:1280px) AND (max-width:1680px) {   }
         @media (min-width:1024px) AND (max-width:1280px) { }
         @media (min-width:768px) AND (max-width:1023px) {  }
         @media (min-width:600px) AND (max-width:799px) {   }
@@ -65,8 +65,8 @@ body {
 
 
 #slider_header_car{height:200px!important; }
-        @media (min-width:1780px){  #slider_header_car{ height:690px!important;}  }
-        @media (min-width:1580px) AND (max-width:1780px){  #slider_header_car{ height:820px!important;}  }
+        @media (min-width:1780px){  #slider_header_car{ height:800px!important;}  }
+        @media (min-width:1580px) AND (max-width:1780px){  #slider_header_car{ height:790px!important;}  }
         @media (min-width:1480px) AND (max-width:1580px){  #slider_header_car{ height:790px!important;}  }
         @media (min-width:1360px) AND (max-width:1480px){  #slider_header_car{ height:720px!important;}  }
         @media (min-width:1280px) AND (max-width:1360px){  #slider_header_car{ height:700px!important;}  }
@@ -613,7 +613,9 @@ body {
 
 
 .cont_categoria_section_result{ min-height: 1000px; margin:0px!important; padding: 0px!important;}
-.cont_categoria_section_result_post{width: 100%; height:100%; margin:0px!important; padding: 0px!important;  display:block; float:left; position:relative; overflow: hidden; }
+/*.cont_categoria_section_result_post{width: 100%; height:100%; margin:0px!important; padding: 0px!important;  display:block; float:left; position:relative; overflow: hidden; }*/
+.cont_categoria_section_result_post{width:100%; height:|100%; margin:0px!important; padding: 0px!important;  display:block; float:left; position:relative; overflow:hidden; opacity:0.0;}
+
 .cont_categoria_section_result_post a{color:#fff;}
 .cont_categoria_section_result_post .result_post_01{ width:100%; margin:0px!important; padding: 0px!important; float:left; position:relative; z-index:5;}
 .cont_categoria_section_result_post .result_post_02{ width:100%; margin:0px!important; padding: 0px!important; background: #666; float:left; overflow:hidden; position:relative; z-index:1;}
@@ -657,12 +659,19 @@ body {
 
 
 
+        .contCatResult_on{ opacity:1.0; transition: opacity 3s; }
+
+
+
+
+
 
 
 /*----------------------------------------------------------*/
 
 
 .cont_categoria_section_sidebar{margin:0px!important; padding:0px!important; }
+
 
 
 
@@ -872,10 +881,10 @@ body {
 
 #cont_post_head{ width:100%; }
 
-#cont_post_head_catSubcat{ position:relative; float:none; margin:0 auto; }
+#cont_post_head_catSubcat{ position:relative; float:none; margin:0 auto; text-transform: capitalize; }
 #cont_post_head_catSubcat h2{font-size: 18px; float:left; margin-left:15px; margin-bottom:5px;  margin-top:5px;}
 #tituloPost{  font-size: 60px; margin:30px;}
-#categoriaPost{ font-size: 40px; margin:20px 0px 0px 0px; font-weight: bold;}
+#categoriaPost{ font-size: 40px; margin:20px 0px 0px 0px; font-weight: bold; text-transform: capitalize;}
 #cont_post_head_titRedsocial{ margin:30px 0px 10px 0px; color:#2095f4; font-size: 20px;}
 #cont_post_head_redsocial{ margin:20px 0px;}
 #cont_post_head_redsocial a{  }
