--- a/css/style_template.css
+++ b/css/style_template.css
@@ -963,15 +963,52 @@ body {
 
 
 
-#cont_post_section_destacado{ margin:0px; padding:0px; }
-#cont_post_section_destacado div{ background:#555; border:1px #333 solid; box-sizing:border-box;}
 
-          @media (min-width:1280px) { #cont_post_section_destacado div{ height: 426px; transition: width 1s;} }
-          @media (min-width:1024px) AND (max-width:1280px) { #cont_post_section_destacado div{ height: 341px; transition: width 1s;} }
-          @media (min-width:768px) AND (max-width:1023px) {  #cont_post_section_destacado div{ height: 266px; transition: width 1s;} }
-          @media (min-width:600px) AND (max-width:799px) {   #cont_post_section_destacado div{ height: 190px; transition: width 1s;} }
-          @media (min-width:480px) AND (max-width:599px) {   #cont_post_section_destacado div{ height: 440px; transition: width 1s;} }
-          @media (min-width:320px) AND (max-width:479px) {   #cont_post_section_destacado div{ height: 300px; transition: width 1s;} }
+
+#cont_post_section_destacado{ margin:0px; padding:0px; }
+.cont_destacado_post_moduloFooter{ position: relative; margin: 0!important; padding: 0!important;}
+.cont_destacado_post_moduloFooter a{ width:100%; height: 100%; margin: 0; padding: 0; text-decoration: none; text-transform:none; color:#fff; float:left; display:block;}
+.contDestFooter_Img{ height: 100%; position:relative;  overflow: hidden;  margin: 0!important; padding: 0!important;}
+.contDestFooter_Img img{ position:relative; width:100%!important; margin: 0;  padding: 0;}
+.cont_destacado_post_moduloFooter .cont_destacado_footer_moduloCont_fondo_opacity{ background:#000; width: 100%;  height: 100%; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.0;}
+
+.cont_destacado_post_moduloFooter .cont_info_destacado_header{ position:absolute; top: 0; left: 0; margin:20px 0px; height: calc(100% - 40px);}
+.cont_destacado_post_moduloFooter .cont_info_destacado_header .cont_destacado_header_moduloCont_item1{text-transform: capitalize; font-size: 14px; line-height: 20px; background: #333; display: block; float: left;  padding: 1px 10px; margin-left: 5px; margin-bottom: 5px; }
+.cont_destacado_post_moduloFooter .cont_info_destacado_header p{  margin: 30px 0px 0px 5px;  display: block; float: left; font-size: 21px; line-height: 25px; font-weight: 500; }
+
+/*
+
+.cont_destacado_post_moduloFooter div{ position: relative; }
+.cont_destacado_post_moduloFooter a{ width:100%; text-decoration: none; text-transform:none; color:#fff; float:left; display:block;}
+.cont_destacado_post_moduloFooter .cont_destacado_footer_moduloCont_fondo_opacity{ width: 100%;  height: 100%; display: block; float: left; position: absolute;  top: 0;  left: 0; opacity: 0.5;}
+
+
+*/
+          @media (min-width:1280px) {
+            #cont_post_section_destacado .cont_destacado_post_moduloFooter{ height: 426px; transition: width 1s;}
+            .cont_destacado_post_moduloFooter .cont_destacado_footer_moduloCont_fondo_opacity{ opacity: 0.5;}
+          }
+          @media (min-width:1024px) AND (max-width:1280px) {
+            #cont_post_section_destacado .cont_destacado_post_moduloFooter{ height: 341px; transition: width 1s;}
+            .cont_destacado_post_moduloFooter .cont_destacado_footer_moduloCont_fondo_opacity{ opacity: 0.5;}
+          }
+          @media (min-width:768px) AND (max-width:1023px) {
+            #cont_post_section_destacado .cont_destacado_post_moduloFooter{ height: 395px; transition: width 1s;}
+            .cont_destacado_post_moduloFooter .cont_info_destacado_header{ position:relative;}
+
+          }
+          @media (min-width:600px) AND (max-width:799px) {
+             #cont_post_section_destacado .cont_destacado_post_moduloFooter{ height: 285px; transition: width 1s;}
+             .cont_destacado_post_moduloFooter .cont_info_destacado_header{ position:relative;}
+          }
+          @media (min-width:480px) AND (max-width:599px) {
+            #cont_post_section_destacado .cont_destacado_post_moduloFooter{ height: 440px; transition: width 1s;}
+            .cont_destacado_post_moduloFooter .cont_destacado_footer_moduloCont_fondo_opacity{ opacity: 0.5;}
+          }
+          @media (min-width:320px) AND (max-width:479px) {
+            #cont_post_section_destacado .cont_destacado_post_moduloFooter{ height: 300px; transition: width 1s;}
+            .cont_destacado_post_moduloFooter .cont_destacado_footer_moduloCont_fondo_opacity{ opacity: 0.5;}
+          }
 
 
 
