--- a/online/old_/css/style_template.css
+++ b/online/old_/css/style_template.css
@@ -1115,7 +1115,7 @@ body {
 
 #cont_post_section_video_info{ position: relative;}
 #cont_post_section_video_info_youtuber{ margin-top: 20px;}
-#cont_post_section_video_info_youtuber{} .infoLink_youtuber_section{ margin-bottom: 10px; float:left; display:block; border-radius:20px; margin-left: 20px; background:#000; min-width:130px;}
+#cont_post_section_video_info_youtuber{} .infoLink_youtuber_section{ margin-bottom: 10px; float:left; display:block; border-radius:0px 10px 10px 0px; margin-left: 20px; background:#000; min-width:130px;}
 #cont_post_section_video_info_youtuber{} .infoLink_youtuber_section i{  position:relative; left:-10px; width:30px; height:30px; font-size:20px; line-height: 30px; float:left; display:block; background:#029dd5; text-align:center; border-radius:14px; color:#fff;}
 #cont_post_section_video_info_youtuber{} .infoLink_youtuber_section h1{ font-size:18px; line-height:40px; float: left; display:block; margin:0px; padding:0px 10px 0px 10px;  }
 #cont_post_section_video_info_youtuber{} .infoLink_youtuber_section img{border-radius: 21px;  margin-top: 0px;  float: left;  display: block; }
